# pysolr-utils

./: LICENSE  README.md  requirements.txt  setup.cfg
services/supervisord/: create-solr-cores-worker.conf
services/systemd/: create-solr-cores-worker.service
solr_utils/: __init__.py
solr_utils/create_solr_core/: __init__.py  proc.py  worker.py
